--- a/Ghost Stories site/css/submit.css
+++ b/Ghost Stories site/css/submit.css
@@ -26,3 +26,14 @@
     margin-bottom: 30px;
   }
 }
+
+
+@media (min-width: 1150px) {
+
+  .contain {
+    width: 1150px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+}
